Formatting and Content
Added a ton of pages which need to be filled, but I centered the footer
and made sure it was responsive

--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE HTML>
-<!--
-	Phantom by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Evan Lewis</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+
+		<!-- Scripts -->
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/skel.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
 	</head>
 	<body>
 		<!-- Wrapper -->
@@ -21,19 +19,15 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="inner">
-
-							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Evan Lewis</span>
+									<span class="symbol"><img src="images/logo.svg" alt="" /></span>
+									<span class="title">Evan Lewis</span>
 								</a>
-
-							<!-- Nav -->
 								<nav>
 									<ul>
 										<li><a href="#menu">Menu</a></li>
 									</ul>
 								</nav>
-
 						</div>
 					</header>
 
@@ -44,7 +38,6 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="about.html">About Me</a></li>
 							<li><a href="projects.html">Projects</a></li>
-							<li><a href="elements.html">Elements</a></li>
 						</ul>
 					</nav>
 
@@ -53,21 +46,21 @@
 						<div class="inner">
 							<header>
 								<h1>Evan Lewis</h1>
-								<p>What do I do?</p>
+								<h2>What do I do?</h2>
 							</header>
 							<section class="tiles">
-								<article class="style1">
+								<article class="tile">
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/waveVis.jpg" alt="" />
 									</span>
 									<a href="brainWaves.html">
-										<h2>Magna</h2>
+										<h2>Touching Brainwaves</h2>
 										<div class="content">
 											<p>Using the Emotiv Insight EEG headset, the data can be modeled into 3D objects.</p>
 										</div>
 									</a>
 								</article>
-								<article class="style1">
+								<article class="tile">
 									<span class="image">
 										<img src="images/hurr3ourcm.png" alt="" />
 									</span>
@@ -78,9 +71,9 @@
 										</div>
 									</a>
 								</article>
-								<article class="style1">
+								<article class="tile">
 									<span class="image">
-										<img src="images/3dBrain.jpg" alt="" />
+										<img src="images/tdcs.jpg" alt="" />
 									</span>
 									<a href="tdcs.html">
 										<h2>TDCS Research</h2>
@@ -89,7 +82,7 @@
 										</div>
 									</a>
 								</article>
-								<article class="style1">
+								<article class="tile">
 									<span class="image">
 										<img src="images/3dBrain.jpg" alt="" />
 									</span>
@@ -110,30 +103,23 @@
 							<section>
 								<h2>Get in touch</h2>
 								<ul class="icons">
-									<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
+									<li><a href="https://www.facebook.com/pmstan" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
 									<li><a href="https://github.com/ehlewis" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon style2 fa-500px"><span class="label">500px</span></a></li>
-									<li><a href="#" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
-									<li><a href="#" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
+									<li><a href="tel:845-943-8056" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
+									<li><a href="mailto:ehlewis@me.com?Subject=Website" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
 								</ul>
 							</section>
-							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
+						</div>
+
+						<div class="inner">
+							<section>
+								<ul class="copyright">
+									<li>&copy; Evan Lewis | All rights reserved</li>
+								</ul>
+							</section>
 						</div>
 					</footer>
 
 			</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
-
 	</body>
 </html>
