--- a/brainwaves.html
+++ b/brainwaves.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Evan Lewis | About</title>
+		<title>Evan Lewis - Brain Waves</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -50,11 +50,11 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>About Me</h1>
+							<h1>Transforming Brain Waves</h1>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
-							<p>Since I was young, I have always been interested in electronics. Give me a box of wires and I'll be extremely happy for hours.</p>
-							<p>Now that I'm in college not much has changed</p>
-							<p>I still experiment with any electronics that I'm given. Some would call me hacker. I try to make interesting things out of boring things. This website represents a collection of some of my favorite projects.</p>
+							<p>1</p>
+							<p>2</p>
+							<p>3</p>
 						</div>
 					</div>
 
