--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 									<span class="image">
 										<img src="images/waveVis.jpg" alt="" />
 									</span>
-									<a href="brainWaves.html">
+									<a href="brainwaves.html">
 										<h2>Touching Brainwaves</h2>
 										<div class="content">
 											<p>Using the Emotiv Insight EEG headset, the data can be modeled into 3D objects.</p>
@@ -84,9 +84,9 @@
 								</article>
 								<article class="tile">
 									<span class="image">
-										<img src="images/3dBrain.jpg" alt="" />
+										<img src="images/brainPrint.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="brainPrint.html">
 										<h2>3D Printing my Brain</h2>
 										<div class="content">
 											<p>Making good out of bad</p>
