--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 									<a href="tdcs.html">
 										<h2>TDCS Research</h2>
 										<div class="content">
-											<p></p>
+											<p>Culmination of a three year project</p>
 										</div>
 									</a>
 								</article>
