--- a/brainwaves.html
+++ b/brainwaves.html
@@ -52,9 +52,10 @@
 						<div class="inner">
 							<h1>Transforming Brain Waves</h1>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
-							<p>1</p>
-							<p>2</p>
-							<p>3</p>
+							<p>A few years ago I backed the kickstarter for the <a href='https://www.kickstarter.com/projects/tanttle/emotiv-insight-optimize-your-brain-fitness-and-per'>Emotiv Insight EEG Headset</a></p>
+							<p>I've always been interested in the way the brain works and its inner workings (as evident in some of my other projects). This headset would let me see in real time some of the functionings of brainwaves. It also would allow me to incorperate it into video games if I ever went own that route, much like <a href='http://steamcommunity.com/sharedfiles/filedetails/?id=202579788'>Throw Trucks With Your Mind</a></p>
+							<p>Although the reslease of the Emotiv Insight was delayed a year or two, it eventually arrived. Initially, the support for it wasn't all that useful and was lacking, so I let it sit for a couple years and just picked it back up when I moved into my dorm. This is when I rememebred that I was able to access and record the raw EEG signals before they were processed. I found a code sample that was provided in the documentation and adapt it so that it would be a bit more simple for my uses. I decided that I wanted to make something visually interesting that expressed something very abstract that occurs every second within us. To do this I employed the use of the powerful 3D modeling program Autodesk Maya.</p>
+							<p>Maya has a built in API with support for Python that allows us to perform any function within the program from within a script. Using the API documentation, I was able to cobble together a script that would parse through the CSV file that contained the EEG file and then plot the points along a plane to create the waves in 3D. The resultant model would then be merged onto the top of a box in order to make it 'watertight' for 3D printing.</p>
 						</div>
 					</div>
 
