Added a webpage for the keycap project

--- a/index.html
+++ b/index.html
@@ -85,6 +85,17 @@
 								</article>
 								<article class="tile">
 									<span class="image">
+										<img src="images/keycap.png" alt="" />
+									</span>
+									<a href="keycap.html">
+										<h2>3D Designed and Printed Keycap</h2>
+										<div class="content">
+											<p>Created a octopus to grasp a key on my keyboard.</p>
+										</div>
+									</a>
+								</article>
+								<article class="tile">
+									<span class="image">
 										<img src="images/tdcs.jpg" alt="" />
 									</span>
 									<a href="tdcs.html">
