--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="about.html">About Me</a></li>
-							<li><a href="projects.html">Projects</a></li>
+							<li><a href="threeTest.html">Octopus</a></li>
 						</ul>
 					</nav>
 
@@ -48,6 +48,17 @@
 								<h1>Evan Lewis</h1>
 								<h2>What do I do?</h2>
 							</header>
+							<article class="tile">
+								<span class="image">
+									<img src="images/musicVis.png" alt="" />
+								</span>
+								<a href="music.html">
+									<h2>Music Visualization</h2>
+									<div class="content">
+										<p>How can you easily visualize music?</p>
+									</div>
+								</a>
+							</article>
 							<section class="tiles">
 								<article class="tile">
 									<span class="image">
@@ -101,7 +112,7 @@
 					<footer id="footer">
 						<div class="inner">
 							<section>
-								<h2>Get in touch</h2>
+								<h2>Get in touch, especially if you have ideas you may want to collaborate on</h2>
 								<ul class="icons">
 									<li><a href="https://www.facebook.com/pmstan" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
 									<li><a href="https://github.com/ehlewis" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
@@ -119,6 +130,17 @@
 							</section>
 						</div>
 					</footer>
+
+					<script>
+					  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+					  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+					  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+					  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+					  ga('create', 'UA-92519809-1', 'auto');
+					  ga('send', 'pageview');
+
+					</script>
 
 			</div>
 	</body>
