--- a/music.html
+++ b/music.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Evan Lewis | About</title>
+		<title>Evan Lewis - MASH</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -46,15 +46,10 @@
 							<li><a href="elements.html">Elements</a></li>
 						</ul>
 					</nav>
-
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>About Me</h1>
-							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
-							<p>Since I was young, I have always been interested in electronics. Give me a box of wires and I'll be extremely happy for hours (there is photo evidence and now that I'm in college not much has changed). I'd try to make fantasy machines out of these scraps, however, naturally they didn't work. Though after years of experimentation and reading, I've finally been able to make actual creations. It's almost like I was destined to participate in hackathons and tend to be most content when I'm working on a project.
-							It's in my nature to try to get the best experience that I can and learn as much as I can, even if it's not immediately pertinent to my field of study (cyber-security). I belive that you'd be suprised when random skills can suddenly become useful and maybe even important. This still holds true when getting that experience means doing something out of my way. </p>
-							<p>I still experiment with anything that I can get my hands on. Some would call me hacker. I try to make interesting things out of boring things. This website represents a collection of some of my favorite projects.</p>
+
 						</div>
 					</div>
 
