--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 							<section class="tiles">
 								<article class="tile">
 									<span class="image">
-										<img src="images/musicVis.png" alt="" />
+										<img src="images/hurr3ourcm.png" alt="" />
 									</span>
 									<a href="music.html">
 										<h2>Music Visualization</h2>
