--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 					<footer id="footer">
 						<div class="inner">
 							<section>
-								<h2>Get in touch, especially if you have ideas you may want to collaborate on</h2>
+								<p>Get in touch, especially if you have ideas you may want to collaborate on</p>
 								<ul class="icons">
 									<li><a href="https://www.facebook.com/pmstan" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
 									<li><a href="https://github.com/ehlewis" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
