Added tracking code on all pages and a little content

--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
 		<script src="assets/js/skel.min.js"></script>
 		<script src="assets/js/util.js"></script>
 		<script src="assets/js/main.js"></script>
+
+		<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+			ga('create', 'UA-92519809-1', 'auto');
+			ga('send', 'pageview');
+
+		</script>
+
 	</head>
 	<body>
 		<!-- Wrapper -->
@@ -48,18 +60,18 @@
 								<h1>Evan Lewis</h1>
 								<h2>What do I do?</h2>
 							</header>
-							<article class="tile">
-								<span class="image">
-									<img src="images/musicVis.png" alt="" />
-								</span>
-								<a href="music.html">
-									<h2>Music Visualization</h2>
-									<div class="content">
-										<p>How can you easily visualize music?</p>
-									</div>
-								</a>
-							</article>
 							<section class="tiles">
+								<article class="tile">
+									<span class="image">
+										<img src="images/musicVis.png" alt="" />
+									</span>
+									<a href="music.html">
+										<h2>Music Visualization</h2>
+										<div class="content">
+											<p>How can you easily visualize music?</p>
+										</div>
+									</a>
+								</article>
 								<article class="tile">
 									<span class="image">
 										<img src="images/waveVis.jpg" alt="" />
@@ -68,6 +80,17 @@
 										<h2>Touching Brainwaves</h2>
 										<div class="content">
 											<p>Using the Emotiv Insight EEG headset, the data can be modeled into 3D objects.</p>
+										</div>
+									</a>
+								</article>
+								<article class="tile">
+									<span class="image">
+										<img src="images/key.png" alt="" />
+									</span>
+									<a href="key.html">
+										<h2>Keythulhu</h2>
+										<div class="content">
+											<p>Custom made 3D printed keycap</p>
 										</div>
 									</a>
 								</article>
@@ -130,18 +153,7 @@
 							</section>
 						</div>
 					</footer>
+				</div>
 
-					<script>
-					  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-					  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-					  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-					  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-					  ga('create', 'UA-92519809-1', 'auto');
-					  ga('send', 'pageview');
-
-					</script>
-
-			</div>
 	</body>
 </html>
