--- a/key.html
+++ b/key.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Evan Lewis | Brain Print</title>
+		<title>Evan Lewis | Keythulhu</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -46,19 +46,19 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
+							<!--
 							<li><a href="projects.html">Projects</a></li>
 							<li><a href="elements.html">Elements</a></li>
+							-->
 						</ul>
 					</nav>
 
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>3D Printing My Own Brain</h1>
+							<h1>Keyt2hulhu</h1>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
-							<p>Near the end of one of my years of school I started to get frequent headaches. Eventually I decided that it would be best to see a doctor to get a professional opinion. After bouncing from doctor to doctor, I eventually reached a neurosurgeon who recommended that I get a full MRI of my brain to see if anything abnormal was forming inside my brain.
-							I went in to get scanned and it went as expeced. When I got out of the machine the operators told me that I would return to the doctor for my results in about three weeks. I started thinking about the test that had been performed and I decided that there must be a way that I could change the 2D stacks of photos into a 3D model. They were taken from a 3D object after all. I requested a copy of the scan and three days later I returned to pick it up from the office.
-							The files were stored on a CD, finding a disk reader for this was suprisingly difficult. However, after having moved they files onto my computer I began trying to manipulate them.</p>
+							<p>1</p>
 							<p>2</p>
 							<p>3</p>
 						</div>
