--- a/threeTest.html
+++ b/threeTest.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 	<head>
 		<title>Evan Lewis | three js experiments</title>
@@ -5,84 +6,99 @@
 			body { margin: 0; }
 			canvas { width: 100%; height: 100% }
 		</style>
+
+		<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+			ga('create', 'UA-92519809-1', 'auto');
+			ga('send', 'pageview');
+
+		</script>
+		
 	</head>
 	<body>
 		<script src="scripts/three.min.js"></script>
 		<script src="scripts/OrbitControls.js"></script>
 
 		<script>
+			// Scene setup
 			var scene = new THREE.Scene();
 			var camera = new THREE.PerspectiveCamera( 75, window.innerWidth/window.innerHeight, 1, 1000 );
-
-			//controls = new THREE.OrbitControls(camera, document, renderer.domElement);
-
-			//controls = new THREE.OrbitControls( camera, renderer.domElement );
-			//controls.addEventListener( 'change', render );
 			controls = new THREE.OrbitControls( camera );
   		controls.addEventListener( 'change', render );
+			camera.position.z = 5;
 
 			// Lights
-
 			var ambientLight = new THREE.AmbientLight(0x0c0c0c);
-      scene.add(ambientLight);
-
       var spotLight = new THREE.SpotLight(0xffffff);
       spotLight.position.set(2.5, 2.5, 2.5);
-      spotLight.castShadow = true; // where?
+      spotLight.castShadow = true;
+			scene.add(ambientLight);
       scene.add(spotLight);
 
 			// Background and renderer
 			scene.background = new THREE.Color( 0xf2f2f2 ); //Background color
-
 			var renderer = new THREE.WebGLRenderer();
 			renderer.setSize( window.innerWidth, window.innerHeight );
 			document.body.appendChild( renderer.domElement );
 
+			console.log("about to load");
+			// instantiate a loader
+			var loader = new THREE.JSONLoader();
 
+			// load a resource
+			loader.load(
+				// resource URL
+				'models/octotest.js',
+				// Function when resource is loaded
+				function ( geometry, materials ) {
+					console.log("finished");
+					var material = new THREE.MultiMaterial( materials );
+					var object = new THREE.Mesh( geometry, material );
+					scene.add( object );
+				}
+			);
 
-			/*var loader = new THREE.JSONLoader();
+			console.log("I probs didnt run");
+			/*
+			var loader = new THREE.JSONLoader();
+			  loader.load("../skeleton.js", function(geometry, materials) {
+			    materials[0].skinning = true;
+			    callback(new THREE.SkinnedMesh(geometry, materials[0]));
+			  });
+			*/
 
-			loader.load("brain.js", function( geometry, materials ) {
-			material = new THREE.MultiMaterial( materials );
-			mesh = new THREE.Mesh( geometry, material );
-			scene.add( mesh );
-			});*/
-
+			/*
 			var geometry = new THREE.BoxGeometry( 1, 1, 1 );
 			var material = new THREE.MeshLambertMaterial( { color: 0x4286f4, wireframe: true } );
 			var cube = new THREE.Mesh( geometry, material );
+
 			scene.add( cube );
+			*/
 
-			camera.position.z = 5;
-
-
-
-
+			// Functions and calls
 			var render = function () {
 				requestAnimationFrame( render );
-
 				//cube.rotation.x += .01;
 				//cube.rotation.y += Math.cos(cube.rotation.x)/100;
-
-				var timer = Date.now() * 0.0001;
-
-				//camera.position.x = Math.sin( timer ) * 10;
-				//camera.position.y = Math.sin( timer ) * 10;
 				camera.lookAt( scene.position );
 
 				renderer.render(scene, camera);
 			};
 
-
-			render();
-
+			/*
 			function animate() {
 
   			requestAnimationFrame( animate );
   			controls.update();
 
-			}
-			animate();
+			}*/
+
+			render();
+			//animate();
 		</script>
 	</body>
 </html>
