--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 									<a href="brainPrint.html">
 										<h2>3D Printing my Brain</h2>
 										<div class="content">
-											<p>Making good out of bad</p>
+											<p>Haven't you wanted to hold a life-size replica of your brain?</p>
 										</div>
 									</a>
 								</article>
