lots of changes

--- a/brainPrint.html
+++ b/brainPrint.html
@@ -28,37 +28,18 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Phantom</span>
+									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Evan Lewis</span>
 								</a>
-
-							<!-- Nav -->
-								<nav>
-									<ul>
-										<li><a href="#menu">Menu</a></li>
-									</ul>
-								</nav>
 
 						</div>
 					</header>
-
-				<!-- Menu -->
-					<nav id="menu">
-						<h2>Menu</h2>
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="projects.html">Projects</a></li>
-							<li><a href="elements.html">Elements</a></li>
-						</ul>
-					</nav>
 
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
 							<h1>3D Printing My Own Brain</h1>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
-							<p>Near the end of one of my years of school I started to get frequent headaches. Eventually I decided that it would be best to see a doctor to get a professional opinion. After bouncing from doctor to doctor, I eventually reached a neurosurgeon who recommended that I get a full MRI of my brain to see if anything abnormal was forming inside my brain.
-							I went in to get scanned and it went as expeced. When I got out of the machine the operators told me that I would return to the doctor for my results in about three weeks. I started thinking about the test that had been performed and I decided that there must be a way that I could change the 2D stacks of photos into a 3D model. They were taken from a 3D object after all. I requested a copy of the scan and three days later I returned to pick it up from the office.
-							The files were stored on a CD, finding a disk reader for this was suprisingly difficult. However, after having moved they files onto my computer I began trying to manipulate them.</p>
+							<p>When I got a full head MRI I requested the files, and with them I developed a method to mesh the 2D JPEG files into a file containing 3D voxels. The process involved taking the </p>
 							<p>2</p>
 							<p>3</p>
 						</div>
@@ -79,7 +60,7 @@
 						<div class="inner">
 							<section>
 								<ul class="copyright">
-								<li>&copy; Evan Lewis | All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Evan Lewis | All rights reserved</li>
 								</ul>
 							</section>
 						</div>
