--- a/mash.html
+++ b/mash.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Evan Lewis - MASH</title>
+		<title>Evan Lewis | MASH</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -28,36 +28,44 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Phantom</span>
+									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Evan Lewis</span>
 								</a>
-
-							<!-- Nav -->
-								<nav>
-									<ul>
-										<li><a href="#menu">Menu</a></li>
-									</ul>
-								</nav>
 
 						</div>
 					</header>
 
-				<!-- Menu -->
-					<nav id="menu">
-						<h2>Menu</h2>
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="projects.html">Projects</a></li>
-							<li><a href="elements.html">Elements</a></li>
-						</ul>
-					</nav>
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Hurricane Visualization</h1>
-							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
-							<p>1</p>
-							<p>2</p>
-							<p>3</p>
+							<!-- <div id="artwork" -->
+								<h1>Hurricane Visualization</h1>
+								<span class="image main"><img src="images/MASH/hurr6finalspan.png" alt=""/></span>
+								<p>This project was an excursion into a purely visual </p>
+								<div id="center">
+									<img src="images/MASH/galm3final.png" alt="" height="512" width="512"/>
+								</div>
+								<p>3</p>
+								<div id="center">
+									<p>New height map with no texture</p>
+									<img src="images/MASH/hurr1.png" alt="" height"512" width"512"/>
+									<img src="images/MASH/hurr2cm.png" alt="" height"512" width"512"/>
+								</div>
+								<p>4</p>
+								<div id="center">
+									<p>Intermediate versions</p>
+									<img src="images/MASH/hurr3.png" alt="" height"512" width"512"/>
+									<img src="images/MASH/hurr5cm.png" alt="" height"512" width"512"/>
+								</div>
+								<p>5</p>
+								<div id="center">
+									<p>Final version</p>
+									<img src="images/MASH/hurr6final.png" alt="" height"512" width"512"/>
+								</div>
+								<!-- <div id="metadata">
+									<p>loltest</p>
+								</div> -->
+
+							<!-- </div> -->
 						</div>
 					</div>
 
@@ -76,7 +84,7 @@
 						<div class="inner">
 							<section>
 								<ul class="copyright">
-								<li>&copy; Evan Lewis | All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Evan Lewis | All rights reserved</li>
 								</ul>
 							</section>
 						</div>
